# blake

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix
.github/: dependabot.yaml
.github/workflows/: ci.yaml  ci.yml  release.yaml
src/: main.rs
src/application/port/: diff_formatter.rs  mod.rs
src/config/: keymap.rs  loader.rs  mod.rs
src/domain/: blame.rs  commit.rs  diff.rs  gateway.rs  mod.rs
src/infrastructure/: git.rs  mod.rs
src/infrastructure/formatter/: delta.rs  mod.rs
src/ui/: app.rs  event.rs  mod.rs
src/ui/action/: blame.rs  diff.rs  global.rs  help.rs  mod.rs
src/ui/layout/: mod.rs
src/ui/mode/: blame.rs  diff.rs  help.rs  mod.rs
src/ui/widget/: blame_view.rs  diff_view.rs  help_view.rs  mod.rs  status_bar.rs
