[package]
name = "blake"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi-to-tui = "7"
anyhow = "1"
crossterm = "0.28"
dirs = "6.0.0"
git2 = "0.19"
ratatui = "0.29"
serde = {features = ["derive"], version = "1.0.228"}
thiserror = "2"
tokio = {features = ["full"], version = "1"}
toml = "0.9.11"
which = "8.0.0"

[dev-dependencies]
proptest = "1.9.0"
