[package]
name = "blake"
version = "0.0.2"
edition = "2024"

[dependencies]
ansi-to-tui = "8"
anyhow = "1"
crossterm = "0.29"
dirs = "6.0.0"
git2 = "0.20"
open = "5.3.3"
ratatui = "0.30"
serde = {features = ["derive"], version = "1.0.228"}
thiserror = "2"
toml = "0.9.11"
which = "8.0.0"

[dev-dependencies]
proptest = "1.9.0"
